fixed: search todoLists in a addToDo2.js  file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./addToDo.js"></script>
-    <script src="./script.js"></script>
   </head>
   <body>
     <div id="deleteContainer">
@@ -88,5 +86,6 @@
         </div>
       </div>
     </div>
+    <script src="./addToDo2.js"></script>
   </body>
 </html>
